--- a/src/main/resources/templates/districtJiuYePage.html
+++ b/src/main/resources/templates/districtJiuYePage.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>金融机构页面</title>
+    <title>Title</title>
 </head>
 <body>
-<input type="hidden" value="bank" id="bank">
-<h1>金融机构审批</h1>
-<h3>审批征信信息</h3>
+<h1>区就业审批</h1>
 <table class="table table-hover" id="table_user">
     <thead>
     <tr>
@@ -20,10 +18,6 @@
 
     </tbody>
 </table>
-
-
-<hr style="height:5px;border:none;border-top:5px ridge green;" />
-<h3>实地考察审批</h3>
 </body>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
 <!--datatable-->
@@ -37,7 +31,7 @@
         pageLength: 10,
         responsive: true,
         ajax:{
-            url:"/bank/getCreditInfoList?userAccount=bank",
+            url:"/districtJiuYe/getStandByTaskList?userAccount=districtJiuYe",
             type:"POST",
             dataSrc:function (result) {
                 var taskListWithStartUserId=result.extend.taskListWithStartUserId;
@@ -81,19 +75,19 @@
 
     function agree(taskId) {
         $.ajax({
-           url:"/bank/agree",
-           data:"taskId="+taskId,
-           success:function (result) {
+            url:"/districtJiuYe/agree",
+            data:"taskId="+taskId,
+            success:function (result) {
                 if (result.code===100){
                     alert("处理成功");
                     userTable.ajax.reload();
                 }
-           }
+            }
         });
     }
     function reject(taskId) {
         $.ajax({
-            url:"/bank/reject",
+            url:"/districtJiuYe/reject",
             data:"taskId="+taskId,
             success:function (result) {
                 if (result.code===100){
